--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^7.4.1",
+    "bcrypt": "^6.0.0",
     "next": "^15.5.12",
+    "next-auth": "^4.24.13",
+    "prisma": "^7.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
