--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
-    "@prisma/client": "^7.4.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.2",
     "bcrypt": "^6.0.0",
     "next": "^15.5.12",
     "next-auth": "^4.24.13",
-    "prisma": "^7.4.1",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
